chore: added 400 bad request status code to swagger
