# backend/cmd/swagger/swagger.json
@@ -65,6 +65,12 @@
                             "$ref": "#/definitions/models.PasteModel"
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/responses.BadRequestError"
+                        }
+                    },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
@@ -161,6 +167,12 @@
                         "description": "Обновленная паста",
                         "schema": {
                             "$ref": "#/definitions/models.PasteModel"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/responses.BadRequestError"
                         }
                     },
                     "401": {
@@ -309,6 +321,12 @@
                 "responses": {
                     "204": {
                         "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/responses.BadRequestError"
+                        }
                     },
                     "401": {
                         "description": "Unauthorized",
@@ -577,6 +595,12 @@
                         "description": "Обновленная паста",
                         "schema": {
                             "$ref": "#/definitions/models.PasteModel"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/responses.BadRequestError"
                         }
                     },
                     "401": {
@@ -1100,6 +1124,14 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "responses.BadRequestError": {
+            "type": "object",
+            "properties": {
+                "message": {
                     "type": "string"
                 }
             }
